--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,14 @@ nav.nav-mobile-categories.show {
     background: #EFF4E8;
     border-radius: 8px;
 }
+.carousel-indicators [data-bs-target] {
+    background-color: #242424;
+}
+.carousel-indicators {
+    transform: rotate(90deg);
+    left: -86%;
+    bottom: 50%;
+}
 /* //////////////////////////////////////////////////////////////header /////////////////////////////////////////////////////////////// */
 
 /* //////////////////////////////////////////////////////////////opsity /////////////////////////////////////////////////////////////// */
