--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body {
 }
 #mid-nav form .search-group {
     position: relative;
-    z-index: 99;
+    z-index: 999;
 }
 #mid-nav .search-group i.fa-solid.fa-magnifying-glass {
     position: absolute;
@@ -116,11 +116,13 @@ i.fa-solid.fa-cart-shopping::after {
         top: 100%;
         left: 0;
         width: 100%;
+        z-index: 9999;
     }
     .search-group {
         background: #FFFFFF;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
         padding: 13px 20px;
+        z-index: 99999;
     }
     .search-form button {
         display: none;
@@ -349,10 +351,10 @@ nav.nav-mobile-categories.show {
         padding: 0 100px ;
     }
 }
-#product .card {
+.card {
     position: relative;
 }
-#product .dicont {
+.dicont {
     position: absolute;
     left: 0;
     top: 20px;
@@ -362,10 +364,10 @@ nav.nav-mobile-categories.show {
     color: #F2F2F2;
     border-radius: 0px 31.5px 31.5px 0px;
 }
-#product .old-price {
+.old-price {
     position: relative;
 }
-#product .old-price::after {
+.old-price::after {
     content: "";
     width: 100%;
     height: 2px;
@@ -375,7 +377,7 @@ nav.nav-mobile-categories.show {
     right: 50%;
     transform: rotate(166deg);
 }
-#product .dicont p {
+.dicont p {
     margin: 0;
 }
 #product_details .product-title p {
@@ -1507,3 +1509,15 @@ lord-icon {
 } 
 /* .swiper-rtl .swiper-button-prev:after */
 /* .swiper-button-prev, .swiper-rtl .swiper-button-next */
+
+
+
+.remove_item {
+    cursor: pointer;
+}
+.cart-details.active {
+    display: none;
+}
+
+
+
